# ot_experiment_framework

./: .gitignore  README.md  env.yml  pyproject.toml  recipe.md
experiment_configs/: bayesian_source.yaml  example.yaml  pump_diversion_test.yaml  zooplankton_fate.yaml
framework/: __init__.py  generate.py  renderer.py
sample_files/polygons/: montezuma.dbf  montezuma.sbn  montezuma.sbx  montezuma.shp  montezuma.shp.xml  montezuma.shx  release_full.sbn  release_full.sbx  release_full.shp  release_full.shp.xml  release_full.shx  release_north_bank.sbn  release_north_bank.sbx  release_north_bank.shp  release_north_bank.shp.xml  release_north_bank.shx  release_south_bank.sbn  release_south_bank.sbx  release_south_bank.shp  south_suisun_marsh.sbn  south_suisun_marsh.sbx  south_suisun_marsh.shp  south_suisun_marsh.shp.xml  south_suisun_marsh.shx  suisun_bay.sbn  suisun_bay.sbx  suisun_bay.shp  suisun_bay.shp.xml  suisun_bay.shx  suisun_marsh.sbn  suisun_marsh.sbx  suisun_marsh.shp  suisun_marsh.shp.xml  suisun_marsh.shx  west_suisun_marsh.sbn  west_suisun_marsh.sbx  west_suisun_marsh.shp  west_suisun_marsh.shp.xml  west_suisun_marsh.shx
template/codebase/: plot.py  util.py
template/notebooks/: figures.ipynb
template/params/: config.yaml.j2
template/params/base/: config.yaml.j2
template/scripts/: main.py  run.py  setup.py
